<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="LookUP_Table" Id="{a68b79af-2ff8-0a26-30eb-df596cb7d88d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION LookUP_Table : LREAL
VAR_INPUT
	RawValue: 		LREAL;
	pDataParam: 	POINTER TO ST_LookUpTableParam; (*analog value parameter  // arr_X_Param[0] = smallest vaule  arr_X_Param[arr_max] = bigest vaule*)
END_VAR

VAR CONSTANT
	arr_max : INT := 40; (*maximum size of array for look up table*)
END_VAR
VAR
	i : INT;
	Y2 : LREAL;
	Y1 : LREAL;
	X1 : LREAL;
	X2 : LREAL;
	
	j:	INT;
	XY: ARRAY[0..45, 0..1] OF LREAL;
	PointsNum: INT;
	tempLookUP_TableMem:	LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*IF pDataParam^.eLutMode = E_LutMode.eDisabled THEN
	LookUP_Table:=	LREAL_TO_LINT(RawValue);
ELSIF pDataParam^.eLutMode = E_LutMode.eAnalogToPhisical THEN  
	FOR i:= 0 TO arr_max - 1 DO
		IF (RawValue >= LINT_TO_LREAL(pDataParam^.arrAnalog[i])) AND RawValue <= (LINT_TO_LREAL(pDataParam^.arrAnalog[i+1])) THEN
			X1 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i])) ;//Analog value
			X2 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i+1])) ;//Analog value
			Y1 := (pDataParam^.arrPhisical[i]) ;//Physics value
			Y2 := (pDataParam^.arrPhisical[i+1]) ;//Physics value			
			LookUP_Table:= LREAL_TO_LINT((Y2 - Y1)/(X2 - X1) * ((RawValue) - X1) + Y1) ;
			EXIT;		 			 	
		END_IF	 	
	END_FOR	
ELSIF pDataParam^.eLutMode = E_LutMode.ePhisicalToAnalog THEN 
	FOR i := 0 TO arr_max - 1 DO
		IF (RawValue >= pDataParam^.arrPhisical[i]) AND RawValue <= (pDataParam^.arrPhisical[i+1]) THEN
			Y1 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i])) ;//Analog value
			Y2 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i+1])) ;//Analog value
			X1 := (pDataParam^.arrPhisical[i]) ;//Physics value
			X2 := (pDataParam^.arrPhisical[i+1]) ;//Physics value			
			LookUP_Table:= LREAL_TO_LINT((Y2 - Y1)/(X2 - X1) * ((RawValue) - X1) + Y1) ;
			EXIT;	
		END_IF
	END_FOR	
END_IF*)
	

//////////////////////////////////////////////////////////////////////
IF pDataParam^.eLutMode = E_LutMode.eAnalogToPhisical THEN  
	FOR i := 0 TO arr_max - 1 DO
		X1 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i])) ;//Analog value
		X2 := (LINT_TO_LREAL(pDataParam^.arrAnalog[i+1])) ;//Analog value
		XY[i,0]:= 	LINT_TO_LREAL(pDataParam^.arrAnalog[i]);
		XY[i,1]:= 	pDataParam^.arrPhisical[i];
		IF (X1 = 0) AND (X2 = 0) THEN 
			PointsNum:=	i;
			EXIT;
		END_IF		
	END_FOR
	
	IF i = arr_max THEN
		PointsNum := arr_max;
	END_IF
	
	IF PointsNum >= 2 THEN				 	
		i := 1;
		WHILE (i < PointsNum) AND (XY[i,0] <= RawValue) DO
			i := i + 1;
		END_WHILE;
		LookUP_Table := ((XY[i,1] - XY[i-1,1]) * RawValue - XY[i,1] * XY[i-1,0] + XY[i-1,1] * XY[i,0]) / (XY[i,0] - XY[i-1,0]);
	ELSE
		LookUP_Table:= RawValue;			
	END_IF
		
ELSIF pDataParam^.eLutMode = E_LutMode.ePhisicalToAnalog THEN 
	FOR i := 0 TO arr_max - 1 DO
		X1 := (pDataParam^.arrPhisical[i]) ;//Physics value
		X2 := (pDataParam^.arrPhisical[i+1]) ;//Physics value
		XY[i,0]:= 	pDataParam^.arrPhisical[i];
		XY[i,1]:= 	LINT_TO_LREAL(pDataParam^.arrAnalog[i]);			
		IF (X1 = 0) AND (X2 = 0) THEN
			PointsNum:=	i;	 
			EXIT;
		END_IF		
	END_FOR	
	
	IF PointsNum >= 2 THEN 				
		i := 1;
		WHILE (i < PointsNum) AND (XY[i,0] <= RawValue) DO
			i := i + 1;
		END_WHILE;
		tempLookUP_TableMem:= ((XY[i,1] - XY[i-1,1]) * RawValue - XY[i,1] * XY[i-1,0] + XY[i-1,1] * XY[i,0]) / (XY[i,0] - XY[i-1,0]);
		LookUP_Table:=	(MIN(XY[(PointsNum-1),1],tempLookUP_TableMem));
	ELSE
		LookUP_Table:=	RawValue;
	END_IF
END_IF
	

]]></ST>
    </Implementation>
    <LineIds Name="LookUP_Table">
      <LineId Id="3" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="4" Count="5" />
      <LineId Id="11" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="144" Count="10" />
      <LineId Id="142" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="105" Count="5" />
      <LineId Id="268" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="115" Count="1" />
      <LineId Id="296" Count="3" />
      <LineId Id="241" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="135" Count="2" />
      <LineId Id="140" Count="0" />
      <LineId Id="235" Count="2" />
      <LineId Id="166" Count="0" />
      <LineId Id="155" Count="1" />
      <LineId Id="160" Count="1" />
      <LineId Id="270" Count="1" />
      <LineId Id="168" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="165" Count="0" />
      <LineId Id="239" Count="1" />
      <LineId Id="181" Count="5" />
      <LineId Id="242" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="104" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="87" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>